fix: folder button alignmnent

--- a/src/renderer/scss/TopHeaderComponent.scss
+++ b/src/renderer/scss/TopHeaderComponent.scss
@@ -21,7 +21,7 @@
         }
     }
 
-    .bp4-popover2-target:has(.path-label) {
+    .bp4-button-text:has(.path-label) {
         display: inline-flex;
         align-items: center;
     }
